# prymer

./: .gitignore  README.md  prymer_async_test.py  prymer_test.py  pyproject.toml  setup.py  shapyro_async_test.py  shapyro_test.py
prymer/: __init__.py  getobj.py  op.py  utils.py
shapyro/: getobj.py
tests/: test_prymer_Get.py  test_prymer_ops.py  test_prymer_utils.py  test_shapyro_Get.py  test_shapyro_ops.py  test_shapyro_utils.py
