[tool.poetry]
name = "prymer"
version = "0.1.0"
description = "Python-native data templating"
authors = ["Zach Carlson <fxchip+git@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
aiohttp = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
